examples/test/testpolicy5607.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5607
  namespace: namespace425
spec:
  podSelector:
    matchLabels:
      key43: value12
      key22: value23
      key16: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value42
      podSelector:
        matchLabels:
          key4: value43
          key3: value8
